<resources>
    <string name="app_name">My Application</string>
    <string name="Title">Игра на внимание</string>
    <string name="play">Играть</string>
    <string name="exit"> Выход </string>
    <string name="tv">Введите количество, каждого увиденного объекта</string>
    <string name="et">Введите количество бомб</string>
    <string name="et2">Введите количество андроидов</string>
    <string name="et3">Введите количество кругов</string>
    <string name="ok">ОК</string>
    <string name="game_over">Игра окончена</string>
    <string name="home">На главную</string>
    <string name="adapter_hint">Введите количество</string>
    <string name="add1">+1</string>
    <string name="sub1">-1</string>
    <string name="add5">+5</string>
    <string name="sub5">-5</string>
</resources>